# vscode-mcp

./: .gitignore  Makefile  README.md  SUMMARY.md  mock_extension.py  pyproject.toml  setup.sh  test_integration.py  test_server.py  vscode_mcp_server.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: python.yml  vsce.yml
extension/: package-lock.json  package.json  tsconfig.json
extension/src/: extension.ts
vscode_mcp/: __init__.py  __main__.py  server.py
