[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vscode-mcp"
version = "1.0.2"
description = "VS Code MCP Extension - Exposes VS Code terminals as MCP tools for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "VS Code MCP Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=0.4.0",
    "starlette>=0.27.0",
    "uvicorn>=0.23.0",
    "httpx>=0.24.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
vscode-mcp-server = "vscode_mcp.server:main"

[project.urls]
Homepage = "https://github.com/oscaryard/vscode-mcp"
Repository = "https://github.com/oscaryard/vscode-mcp"

[tool.setuptools.packages.find]
where = ["."]
include = ["vscode_mcp*"]
